--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.22",
     "socket.io": "^4.7.1"
   }
