--- a/Frontend/seller_app/.env
+++ b/Frontend/seller_app/.env
@@ -1,5 +1,5 @@
 API_KEY = API
-BASE_URL = http://192.168.1.16:3000
-SOCKET_URL = http://192.168.1.16:3001
-PORT_SERVER = 3000
-PORT_SOCKET = 3001
+BASE_URL = http://localhost:3005
+SOCKET_URL = http://localhost:3004
+PORT_SERVER = 3005
+PORT_SOCKET = 3004
