--- a/Frontend/seller_app/.env
+++ b/Frontend/seller_app/.env
@@ -1,5 +1,3 @@
 API_KEY = API
-BASE_URL = http://localhost:3005
-SOCKET_URL = http://localhost:3004
-PORT_SERVER = 3005
-PORT_SOCKET = 3004
+BASE_URL = http://192.168.1.7:2001
+SOCKET_URL = http://192.168.1.7:2000
