--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,14 +12,22 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "image-size": "^1.0.2",
     "imagemagick": "^0.1.3",
+    "jimp": "^0.22.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "node-cache": "^5.1.2",
+    "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "sharp": "^0.32.3",
     "socket.io": "^4.7.1"
   }
 }
