--- a/Frontend/chat_app/pubspec.yaml
+++ b/Frontend/chat_app/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   flutter_local_notifications: ^15.1.0+1
   lottie: ^2.4.0
+  flutter_facebook_auth: ^6.0.0
+  package_info_plus: ^4.0.2
 
 
 dev_dependencies:
