--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
-GOOGLE_CLIENT_ID = 505561929536-ncnhs5921kuioqm38ebbfb12pnvlqlg8.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+GOOGLE_CLIENT_ID =
+GOOGLE_CLIENT_SECRET =
 
 EMAIL_SEND_OTP = nguyenquocthinhit@gmail.com
-PASSWORD_SEND_OTP = ysmwconyycwvjuzr
+PASSWORD_SEND_OTP = 
