--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
-GOOGLE_CLIENT_ID =
-GOOGLE_CLIENT_SECRET =
+GOOGLE_CLIENT_ID = abc
+GOOGLE_CLIENT_SECRET = abc
 
 EMAIL_SEND_OTP = nguyenquocthinhit@gmail.com
-PASSWORD_SEND_OTP = 
+PASSWORD_SEND_OTP = abc
