added like, comment post

--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,6 @@ GOOGLE_CLIENT_SECRET = abc
 
 EMAIL_SEND_OTP = nguyenquocthinhit@gmail.com
 PASSWORD_SEND_OTP = abc
+
+PORT_SOCKET = 2000
+PORT_SERVER = 2001
