--- a/Frontend/chat_app/.env
+++ b/Frontend/chat_app/.env
@@ -1,3 +1,3 @@
 API_KEY = API
-BASE_URL = http://localhost:2001
-SOCKET_URL = http://localhost:2000
+BASE_URL = http://192.168.1.7:2001
+SOCKET_URL = http://192.168.1.7:2000
