--- a/Frontend/chat_app/pubspec.yaml
+++ b/Frontend/chat_app/pubspec.yaml
@@ -49,7 +49,10 @@ dependencies:
   lottie: ^2.4.0
   flutter_facebook_auth: ^6.0.0
   package_info_plus: ^4.0.2
+  dropdown_search: ^5.0.6
 
+  freezed: ^2.4.1
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +64,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
